# Data-Science-Stuff

./: Forcasting_Time_Series.ipynb  Query_Classifer_Retrieval_nlp.ipynb  README.md  Uber_nyc_project.ipynb  twitter_sentimental_analysis.ipynb
Housing_California/: Housing_California_nb.ipynb  Housing_Report_READme.md
Housing_California/.ipynb_checkpoints/: Housing_California_nb-checkpoint.ipynb
Mall_Customer_Segmentation/: mall_customer_segmentation_nb.ipynb
NYC_Taxi_Project/: NYC_Description_Report.md  nyc_taxi.ipynb
NYC_Taxi_Project/.ipynb_checkpoints/: Uber_nyc_project-checkpoint.ipynb  nyc_taxi-checkpoint.ipynb
PCA/: HRX_CaseStudy.ipynb
Twitter_Analysis/: twitter_readme.md  twitter_sentimental_analysis.ipynb
predicting_cardio_disease/: Makefile  README.md  pyproject.toml  requirements.txt
predicting_cardio_disease/cardiovascular_disease_prediction/: config.py  dataset.py  evaluate.py  feature_transformer.py  plots.py  utils.py
predicting_cardio_disease/cardiovascular_disease_prediction/modelling/: train.py
predicting_cardio_disease/docs/: mkdocs.yml
predicting_cardio_disease/docs/docs/: index.md
predicting_cardio_disease/notebooks/: 0.01-vishal-eda-1.ipynb  0.02-vishal-eda-2.ipynb  1.00-vishal-etl-1.ipynb  2.00-vishal-modelling-1.ipynb  3.00-vishal-finetune-0.ipynb
